<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtSSID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/text_green"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:background="@color/light_grey"
        android:padding="5dp"/>


    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_margin="1dp"
        android:singleLine="true"
        android:maxLength="32"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:inputType="textPassword"
        android:textColor="@color/text_green"
        android:background="@drawable/bg_green_border"
        android:cursorVisible="true"
        tools:ignore="TextFields" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dark_grey" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarButtonStyle">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/join"
            android:textColor="@color/white"
            android:background="@drawable/bg_green_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="4dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:background="@drawable/bg_green_button"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>