<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/header_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/elika_460"
            android:scaleType="fitCenter"
            android:src="@drawable/elika_460" />

        <TextView
            android:id="@+id/txtProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/elika_460"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text_green"
            android:textSize="20sp"
            android:textStyle="normal"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layer_searching"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">


        <com.elikaaccess.utils.GIFView
            android:id="@+id/imgSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/looking_4_wifi"
            android:textColor="@color/text_green"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textStyle="normal"
            android:typeface="sans" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layer_listing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:background="@drawable/bg_product"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/choose_network"
            android:textColor="@color/text_green"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/listWifi"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layer_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_success"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="@color/text_green"
            />

    </LinearLayout>

</LinearLayout>